Bug 1170688 - Move initialization of text-run parameters until *after* the draw target has been updated; r=jfkthame

This fixes a regression when painting semi-transparent synthetic bold text. When
we do that we update the draw target but refactoring in bug 1037340 part
2 caused us to store the draw target before it was updated.